--- a/partials/header.scss
+++ b/partials/header.scss
@@ -1,10 +1,11 @@
-#professorGrimHeader {
-    font-size: 55px;
+#vermillionHeader {
+    font-size: 70px;
     font-family: 'Courier New', Courier, monospace;
     font-style: bold;
     color: $color;
-    padding-top: 10px;
+    padding-top: 30px;
     padding-bottom: 40px;
+    padding-left: 200px;
     overflow: hidden;
     /* Ensures the content is not revealed until the animation */
     border-right: .15em solid orange;
@@ -15,7 +16,7 @@
     /* Gives that scrolling effect as the typing happens */
     letter-spacing: .15em;
     /* Adjust as needed */
-    animation: typing 3.5s steps(40, end),
+    animation: typing 3.5s steps(30, end),
     blink-caret .75s step-end infinite;
 
 }
