--- a/partials/mixins.scss
+++ b/partials/mixins.scss
@@ -14,3 +14,34 @@
 }
 
 $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
+
+.circle {
+    @include pokemonCircle()
+}
+
+#oddishCircle {
+    @include pokemonCircle;
+    background-image: url("images/oddish.png");
+    
+    }
+  
+  #gloomCircle {
+    @include pokemonCircle();
+    background-image: url("images/gloom.png");
+   
+  }
+  
+  #weezingCircle {
+    @include pokemonCircle();
+    background-image: url("images/weezing.png");
+   
+  }
+  
+  @-webkit-keyframes rotation {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(359deg);
+    }
+  }
