Fixed bug (hopefully…) that was creating different css for the Pokemon circles

--- a/partials/base.scss
+++ b/partials/base.scss
@@ -1,52 +1,88 @@
 @mixin pokemonCircle {
-  width: 180px;
-  height: 180px;
-  margin-top: 30px;
+  width: 100px;
+  height: 100px;
   background-color: #EBEBEB;
-  border-style: outset;
-  border-color: orange;
-  border-width: 15px;
+  border-style: ridge;
+  border-color: #0081C6;
+  border-width: 5px;
   border-radius: 50%;
-  margin-left: 60px;
-  margin-bottom: 30px;
   background-size: cover;
   -webkit-animation: rotation 2s infinite linear;
 }
 
+
 $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 
-.circle {
-  @include pokemonCircle()
+
+.flexContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-#pokeLogo {
-  position: absolute;
-  top: 0px;
+#scoreBoxOne {
+  height: 100px;
+  width: 100px;
+  background-color: #F8F9FC;
+  border-radius: 25px;
+  border-style: ridge;
+  border-color: #0081C6;
+  border-width: 7px;
+}
+
+#scoreBoxTwo {
+  height: 100px;
+  width: 100px;
+  background-color: #F8F9FC;
+  border-radius: 25px;
+  border-style: ridge;
+  border-color: #0081C6;
+  border-width: 7px;
+}
+
+#professorPokemon {
+  display: flex;
+  flex-direction: row;
   left: 0px;
-  padding-top: 0;
-  margin-top: 0;
-  -moz-transform:scale(0.75);
-    -webkit-transform:scale(0.75);
-    transform:scale(0.75);
 }
 
 #oddishCircle {
   @include pokemonCircle;
   background-image: url("images/oddish.png");
-  
-  }
+
+}
 
 #gloomCircle {
-  @include pokemonCircle();
+  @include pokemonCircle;
   background-image: url("images/gloom.png");
- 
+
 }
 
 #weezingCircle {
-  @include pokemonCircle();
+  @include pokemonCircle;
   background-image: url("images/weezing.png");
- 
+
 }
+#chuckPokemon {
+  display: flex;
+  flex-direction: row;
+}
+
+#dragonairCircle {
+  @include pokemonCircle;
+  background-image: url("images/dragonair.jpg");
+  
+  }
+
+  #butterfreeCircle {
+    @include pokemonCircle;
+  background-image: url("images/butterfree.jpg");
+  }
+
+  #charmeleonCircle {
+    @include pokemonCircle;
+  background-image: url("images/charmeleon.jpg");
+  }
 
 @-webkit-keyframes rotation {
   from {
