--- a/main.css
+++ b/main.css
@@ -1,19 +1,115 @@
 body {
   background-color: #DC3737; }
 
-.circle {
-  width: 180px;
-  height: 180px;
-  margin-top: 30px;
+.flexContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+
+#scoreBoxOne {
+  height: 100px;
+  width: 100px;
+  background-color: #F8F9FC;
+  border-radius: 25px;
+  border-style: ridge;
+  border-color: #0081C6;
+  border-width: 7px; }
+
+#scoreBoxTwo {
+  height: 100px;
+  width: 100px;
+  background-color: #F8F9FC;
+  border-radius: 25px;
+  border-style: ridge;
+  border-color: #0081C6;
+  border-width: 7px; }
+
+#professorPokemon {
+  display: flex;
+  flex-direction: row;
+  left: 0px; }
+
+#oddishCircle {
+  width: 100px;
+  height: 100px;
   background-color: #EBEBEB;
-  border-style: outset;
-  border-color: orange;
-  border-width: 15px;
+  border-style: ridge;
+  border-color: #0081C6;
+  border-width: 5px;
   border-radius: 50%;
-  margin-left: 60px;
-  margin-bottom: 30px;
   background-size: cover;
-  -webkit-animation: rotation 2s infinite linear; }
+  -webkit-animation: rotation 2s infinite linear;
+  background-image: url("images/oddish.png"); }
+
+#gloomCircle {
+  width: 100px;
+  height: 100px;
+  background-color: #EBEBEB;
+  border-style: ridge;
+  border-color: #0081C6;
+  border-width: 5px;
+  border-radius: 50%;
+  background-size: cover;
+  -webkit-animation: rotation 2s infinite linear;
+  background-image: url("images/gloom.png"); }
+
+#weezingCircle {
+  width: 100px;
+  height: 100px;
+  background-color: #EBEBEB;
+  border-style: ridge;
+  border-color: #0081C6;
+  border-width: 5px;
+  border-radius: 50%;
+  background-size: cover;
+  -webkit-animation: rotation 2s infinite linear;
+  background-image: url("images/weezing.png"); }
+
+#chuckPokemon {
+  display: flex;
+  flex-direction: row; }
+
+#dragonairCircle {
+  width: 100px;
+  height: 100px;
+  background-color: #EBEBEB;
+  border-style: ridge;
+  border-color: #0081C6;
+  border-width: 5px;
+  border-radius: 50%;
+  background-size: cover;
+  -webkit-animation: rotation 2s infinite linear;
+  background-image: url("images/dragonair.jpg"); }
+
+#butterfreeCircle {
+  width: 100px;
+  height: 100px;
+  background-color: #EBEBEB;
+  border-style: ridge;
+  border-color: #0081C6;
+  border-width: 5px;
+  border-radius: 50%;
+  background-size: cover;
+  -webkit-animation: rotation 2s infinite linear;
+  background-image: url("images/butterfree.jpg"); }
+
+#charmeleonCircle {
+  width: 100px;
+  height: 100px;
+  background-color: #EBEBEB;
+  border-style: ridge;
+  border-color: #0081C6;
+  border-width: 5px;
+  border-radius: 50%;
+  background-size: cover;
+  -webkit-animation: rotation 2s infinite linear;
+  background-image: url("images/charmeleon.jpg"); }
+
+@-webkit-keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(359deg); } }
 
 #pokeLogo {
   position: absolute;
@@ -24,57 +120,6 @@ body {
   -moz-transform: scale(0.75);
   -webkit-transform: scale(0.75);
   transform: scale(0.75); }
-
-#oddishCircle {
-  width: 180px;
-  height: 180px;
-  margin-top: 30px;
-  background-color: #EBEBEB;
-  border-style: outset;
-  border-color: orange;
-  border-width: 15px;
-  border-radius: 50%;
-  margin-left: 60px;
-  margin-bottom: 30px;
-  background-size: cover;
-  -webkit-animation: rotation 2s infinite linear;
-  background-image: url("images/oddish.png"); }
-
-#gloomCircle {
-  width: 180px;
-  height: 180px;
-  margin-top: 30px;
-  background-color: #EBEBEB;
-  border-style: outset;
-  border-color: orange;
-  border-width: 15px;
-  border-radius: 50%;
-  margin-left: 60px;
-  margin-bottom: 30px;
-  background-size: cover;
-  -webkit-animation: rotation 2s infinite linear;
-  background-image: url("images/gloom.png"); }
-
-#weezingCircle {
-  width: 180px;
-  height: 180px;
-  margin-top: 30px;
-  background-color: #EBEBEB;
-  border-style: outset;
-  border-color: orange;
-  border-width: 15px;
-  border-radius: 50%;
-  margin-left: 60px;
-  margin-bottom: 30px;
-  background-size: cover;
-  -webkit-animation: rotation 2s infinite linear;
-  background-image: url("images/weezing.png"); }
-
-@-webkit-keyframes rotation {
-  from {
-    -webkit-transform: rotate(0deg); }
-  to {
-    -webkit-transform: rotate(359deg); } }
 
 #vermillionHeader {
   font-size: 70px;
@@ -110,64 +155,6 @@ body {
   50% {
     border-color: orange; } }
 
-.circle {
-  width: 180px;
-  height: 180px;
-  margin-top: 30px;
-  background-color: #EBEBEB;
-  border-style: outset;
-  border-color: orange;
-  border-width: 15px;
-  border-radius: 50%;
-  margin-left: 60px;
-  margin-bottom: 30px;
-  background-size: cover;
-  -webkit-animation: rotation 2s infinite linear; }
-
-#oddishCircle {
-  width: 180px;
-  height: 180px;
-  margin-top: 30px;
-  background-color: #EBEBEB;
-  border-style: outset;
-  border-color: orange;
-  border-width: 15px;
-  border-radius: 50%;
-  margin-left: 60px;
-  margin-bottom: 30px;
-  background-size: cover;
-  -webkit-animation: rotation 2s infinite linear;
-  background-image: url("images/oddish.png"); }
-
-#gloomCircle {
-  width: 180px;
-  height: 180px;
-  margin-top: 30px;
-  background-color: #EBEBEB;
-  border-style: outset;
-  border-color: orange;
-  border-width: 15px;
-  border-radius: 50%;
-  margin-left: 60px;
-  margin-bottom: 30px;
-  background-size: cover;
-  -webkit-animation: rotation 2s infinite linear;
-  background-image: url("images/gloom.png"); }
-
-#weezingCircle {
-  width: 180px;
-  height: 180px;
-  margin-top: 30px;
-  background-color: #EBEBEB;
-  border-style: outset;
-  border-color: orange;
-  border-width: 15px;
-  border-radius: 50%;
-  margin-left: 60px;
-  margin-bottom: 30px;
-  background-size: cover;
-  -webkit-animation: rotation 2s infinite linear;
-  background-image: url("images/weezing.png"); }
 
 @-webkit-keyframes rotation {
   from {
