--- a/partials/header.scss
+++ b/partials/header.scss
@@ -1,3 +1,14 @@
+#pokeLogo {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    padding-top: 0;
+    margin-top: 0;
+    -moz-transform:scale(0.75);
+      -webkit-transform:scale(0.75);
+      transform:scale(0.75);
+  }
+
 #vermillionHeader {
     font-size: 70px;
     font-family: 'Courier New', Courier, monospace;
