--- a/main.css
+++ b/main.css
@@ -4,11 +4,22 @@ body {
 .flexContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between; }
+  justify-content: space-around; }
+
+#grimName {
+  font-family: 'Courier New', Courier, monospace;
+  color: #F7AF1D;
+  font-size: 20px; }
+
+#chuckName {
+  font-family: 'Courier New', Courier, monospace;
+  color: #F7AF1D;
+  font-size: 20px; }
 
 #scoreBoxOne {
-  height: 100px;
-  width: 100px;
+  height: 75px;
+  width: 75px;
+  padding-top: 0px;
   background-color: #F8F9FC;
   border-radius: 25px;
   border-style: ridge;
@@ -16,8 +27,9 @@ body {
   border-width: 7px; }
 
 #scoreBoxTwo {
-  height: 100px;
-  width: 100px;
+  height: 75px;
+  width: 75px;
+  padding-top: 0px;
   background-color: #F8F9FC;
   border-radius: 25px;
   border-style: ridge;
@@ -27,11 +39,12 @@ body {
 #professorPokemon {
   display: flex;
   flex-direction: row;
-  left: 0px; }
+  justify-content: flex-start; }
 
 #oddishCircle {
   width: 100px;
   height: 100px;
+  margin: 20px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
@@ -44,6 +57,7 @@ body {
 #gloomCircle {
   width: 100px;
   height: 100px;
+  margin: 20px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
@@ -56,6 +70,7 @@ body {
 #weezingCircle {
   width: 100px;
   height: 100px;
+  margin: 20px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
@@ -67,11 +82,13 @@ body {
 
 #chuckPokemon {
   display: flex;
-  flex-direction: row; }
+  flex-direction: row;
+  justify-content: flex-end; }
 
 #dragonairCircle {
   width: 100px;
   height: 100px;
+  margin: 20px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
@@ -84,6 +101,7 @@ body {
 #butterfreeCircle {
   width: 100px;
   height: 100px;
+  margin: 20px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
@@ -96,6 +114,7 @@ body {
 #charmeleonCircle {
   width: 100px;
   height: 100px;
+  margin: 20px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
@@ -123,11 +142,11 @@ body {
 
 #vermillionHeader {
   font-size: 70px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Andale Mono", AndaleMono,monospace;
   font-style: bold;
   color: #F7AF1D;
   padding-top: 30px;
-  padding-bottom: 40px;
+  padding-bottom: 10px;
   padding-left: 200px;
   overflow: hidden;
   /* Ensures the content is not revealed until the animation */
@@ -154,10 +173,3 @@ body {
     border-color: transparent; }
   50% {
     border-color: orange; } }
-
-
-@-webkit-keyframes rotation {
-  from {
-    -webkit-transform: rotate(0deg); }
-  to {
-    -webkit-transform: rotate(359deg); } }
