--- a/partials/base.scss
+++ b/partials/base.scss
@@ -1,6 +1,7 @@
 @mixin pokemonCircle {
   width: 100px;
   height: 100px;
+  margin: 20px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
@@ -17,12 +18,25 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 .flexContainer{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+}
+
+#grimName {
+  font-family: 'Courier New', Courier, monospace;
+  color: $color;
+  font-size: 20px;
+}
+
+#chuckName {
+  font-family: 'Courier New', Courier, monospace;
+  color: $color;
+  font-size: 20px;
 }
 
 #scoreBoxOne {
-  height: 100px;
-  width: 100px;
+  height: 75px;
+  width: 75px;
+  padding-top: 0px;
   background-color: #F8F9FC;
   border-radius: 25px;
   border-style: ridge;
@@ -31,8 +45,9 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
 
 #scoreBoxTwo {
-  height: 100px;
-  width: 100px;
+  height: 75px;
+  width: 75px;
+  padding-top: 0px;
   background-color: #F8F9FC;
   border-radius: 25px;
   border-style: ridge;
@@ -43,8 +58,7 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 #professorPokemon {
   display: flex;
   flex-direction: row;
-  left: 0px;
-}
+justify-content: flex-start;}
 
 #oddishCircle {
   @include pokemonCircle;
@@ -66,6 +80,7 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 #chuckPokemon {
   display: flex;
   flex-direction: row;
+  justify-content: flex-end;
 }
 
 #dragonairCircle {
