--- a/main.css
+++ b/main.css
@@ -16,6 +16,11 @@ body {
   color: #F7AF1D;
   font-size: 20px; }
 
+.scoreContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+
 #scoreBoxOne {
   height: 75px;
   width: 75px;
@@ -36,10 +41,15 @@ body {
   border-color: #0081C6;
   border-width: 7px; }
 
+.pokemonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+
 #professorPokemon {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start; }
+  justify-content: space-evenly; }
 
 #oddishCircle {
   width: 100px;
@@ -124,6 +134,58 @@ body {
   -webkit-animation: rotation 2s infinite linear;
   background-image: url("images/charmeleon.jpg"); }
 
+.pokemonNames {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+
+.names {
+  font-size: 25px;
+  font-family: "Andale Mono", AndaleMono,monospace;
+  font-style: bold;
+  color: #F7AF1D;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange;
+  /* The typwriter cursor */
+  white-space: nowrap;
+  /* Keeps the content on a single line */
+  margin: 0 auto;
+  /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em;
+  /* Adjust as needed */
+  animation: typing 3.5s steps(30, end), blink-caret 0.75s step-end infinite; }
+
+@keyframes typing {
+  from {
+    width: 0; }
+  to {
+    width: 100%; } }
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent; }
+  50% {
+    border-color: orange; } }
+
+.stats {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+
+.statsBox {
+  height: 200px;
+  width: 400px;
+  border-radius: 25px;
+  border-width: 10px;
+  border-style: ridge;
+  border-color: #F7AF1D;
+  background-color: white; }
+
 @-webkit-keyframes rotation {
   from {
     -webkit-transform: rotate(0deg); }
@@ -173,3 +235,6 @@ body {
     border-color: transparent; }
   50% {
     border-color: orange; } }
+
+.shadow {
+  text-shadow: 2px 2px 4px blue; }
