--- a/partials/base.scss
+++ b/partials/base.scss
@@ -33,6 +33,12 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
   font-size: 20px;
 }
 
+.scoreContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 #scoreBoxOne {
   height: 75px;
   width: 75px;
@@ -55,10 +61,16 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
   border-width: 7px;
 }
 
+.pokemonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 #professorPokemon {
   display: flex;
   flex-direction: row;
-justify-content: flex-start;}
+justify-content: space-evenly;}
 
 #oddishCircle {
   @include pokemonCircle;
@@ -98,6 +110,73 @@ justify-content: flex-start;}
     @include pokemonCircle;
   background-image: url("images/charmeleon.jpg");
   }
+
+  .pokemonNames {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .names {
+    font-size: 25px;
+    font-family: "Andale Mono", AndaleMono,monospace;
+    font-style: bold;
+    color: $color;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    // padding-left: 200px;
+    overflow: hidden;
+    /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange;
+    /* The typwriter cursor */
+    white-space: nowrap;
+    /* Keeps the content on a single line */
+    margin: 0 auto;
+    /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em;
+    /* Adjust as needed */
+    animation: typing 3.5s steps(30, end),
+    blink-caret .75s step-end infinite;
+
+}
+
+@keyframes typing {
+    from {
+        width: 0
+    }
+    to {
+        width: 100%
+    }
+}
+
+/* The typewriter cursor effect */
+
+@keyframes blink-caret {
+    from,
+    to {
+        border-color: transparent
+    }
+    50% {
+        border-color: orange;
+    }
+}
+
+.stats {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.statsBox {
+  height: 200px;
+  width: 400px;
+  border-radius: 25px;
+  border-width: 10px;
+  border-style: ridge;
+  border-color: $color;
+  background-color: white;
+}
+ 
 
 @-webkit-keyframes rotation {
   from {
