--- a/partials/base.scss
+++ b/partials/base.scss
@@ -1,6 +1,7 @@
 @mixin pokemonCircle {
   width: 100px;
   height: 100px;
+  margin: 20px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
@@ -17,12 +18,31 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 .flexContainer{
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+}
+
+#grimName {
+  font-family: 'Courier New', Courier, monospace;
+  color: $color;
+  font-size: 20px;
+}
+
+#chuckName {
+  font-family: 'Courier New', Courier, monospace;
+  color: $color;
+  font-size: 20px;
+}
+
+.scoreContainer {
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
 #scoreBoxOne {
-  height: 100px;
-  width: 100px;
+  height: 75px;
+  width: 75px;
+  padding-top: 0px;
   background-color: #F8F9FC;
   border-radius: 25px;
   border-style: ridge;
@@ -31,8 +51,9 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
 
 #scoreBoxTwo {
-  height: 100px;
-  width: 100px;
+  height: 75px;
+  width: 75px;
+  padding-top: 0px;
   background-color: #F8F9FC;
   border-radius: 25px;
   border-style: ridge;
@@ -40,11 +61,16 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
   border-width: 7px;
 }
 
+.pokemonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 #professorPokemon {
   display: flex;
   flex-direction: row;
-  left: 0px;
-}
+justify-content: space-evenly;}
 
 #oddishCircle {
   @include pokemonCircle;
@@ -66,6 +92,7 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 #chuckPokemon {
   display: flex;
   flex-direction: row;
+  justify-content: flex-end;
 }
 
 #dragonairCircle {
@@ -83,6 +110,73 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
     @include pokemonCircle;
   background-image: url("images/charmeleon.jpg");
   }
+
+  .pokemonNames {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .names {
+    font-size: 25px;
+    font-family: "Andale Mono", AndaleMono,monospace;
+    font-style: bold;
+    color: $color;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    // padding-left: 200px;
+    overflow: hidden;
+    /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange;
+    /* The typwriter cursor */
+    white-space: nowrap;
+    /* Keeps the content on a single line */
+    margin: 0 auto;
+    /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em;
+    /* Adjust as needed */
+    animation: typing 3.5s steps(30, end),
+    blink-caret .75s step-end infinite;
+
+}
+
+@keyframes typing {
+    from {
+        width: 0
+    }
+    to {
+        width: 100%
+    }
+}
+
+/* The typewriter cursor effect */
+
+@keyframes blink-caret {
+    from,
+    to {
+        border-color: transparent
+    }
+    50% {
+        border-color: orange;
+    }
+}
+
+.stats {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.statsBox {
+  height: 200px;
+  width: 400px;
+  border-radius: 25px;
+  border-width: 10px;
+  border-style: ridge;
+  border-color: $color;
+  background-color: white;
+}
+ 
 
 @-webkit-keyframes rotation {
   from {
