--- a/main.css
+++ b/main.css
@@ -4,42 +4,79 @@ body {
 .flexContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-around; }
+  justify-content: space-between; }
 
-#grimName {
+.nameBox {
+  width: 150px;
+  height: 35px;
+  padding-top: 3px;
+  background-color: #fff;
+  border-style: ridge;
+  border-color: #F7AF1D;
+  border-radius: 25px;
+  border-width: 5px;
   font-family: 'Courier New', Courier, monospace;
-  color: #F7AF1D;
-  font-size: 20px; }
+  color: #0081C6;
+  text-align: center; }
+
+#grimBox {
+  margin-left: 135px; }
+
+#chuckBox {
+  margin-right: 140px; }
+
+/* #grimName {
+  font-family: 'Courier New', Courier, monospace;
+  color: #0081C6;
+  font-size: 25px;
+  margin-left: 120px;
+  padding-top: 0px;
+  margin-top: 0px;
+}
 
 #chuckName {
   font-family: 'Courier New', Courier, monospace;
-  color: #F7AF1D;
-  font-size: 20px; }
-
+  color: #0081C6;
+  font-size: 25px;
+  margin-right: 175px;
+  padding-top: 0px;
+  margin-top: 0px;
+} */
 .scoreContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-between; }
 
-#scoreBoxOne {
+.scoreBoxOne {
   height: 75px;
   width: 75px;
   padding-top: 0px;
+  margin-left: 175px;
   background-color: #F8F9FC;
   border-radius: 25px;
   border-style: ridge;
   border-color: #0081C6;
-  border-width: 7px; }
+  border-width: 7px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 60px;
+  text-align: center;
+  vertical-align: center;
+  color: #0081C6; }
 
-#scoreBoxTwo {
+.scoreBoxTwo {
   height: 75px;
   width: 75px;
   padding-top: 0px;
+  margin-right: 175px;
   background-color: #F8F9FC;
   border-radius: 25px;
   border-style: ridge;
   border-color: #0081C6;
-  border-width: 7px; }
+  border-width: 7px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 60px;
+  text-align: center;
+  color: #0081C6; }
 
 .pokemonContainer {
   display: flex;
@@ -237,4 +274,4 @@ body {
     border-color: orange; } }
 
 .shadow {
-  text-shadow: 2px 2px 4px blue; }
+  text-shadow: 4px 4px 6px #B8860B; }
