--- a/main.css
+++ b/main.css
@@ -9,13 +9,13 @@ body {
 .nameBox {
   width: 150px;
   height: 35px;
-  padding-top: 3px;
+  padding-top: 2px;
   background-color: #fff;
   border-style: ridge;
   border-color: #F7AF1D;
   border-radius: 25px;
   border-width: 5px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Andale Mono", AndaleMono,monospace;
   color: #0081C6;
   text-align: center; }
 
@@ -50,7 +50,7 @@ body {
 .scoreBoxOne {
   height: 75px;
   width: 75px;
-  padding-top: 0px;
+  margin-bottom: 0px;
   margin-left: 175px;
   background-color: #F8F9FC;
   border-radius: 25px;
@@ -58,10 +58,13 @@ body {
   border-color: #0081C6;
   border-width: 7px;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 60px;
+  font-size: 50px;
   text-align: center;
   vertical-align: center;
-  color: #0081C6; }
+  color: #0081C6;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
 
 .scoreBoxTwo {
   height: 75px;
@@ -74,9 +77,12 @@ body {
   border-color: #0081C6;
   border-width: 7px;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 60px;
+  font-size: 50px;
   text-align: center;
-  color: #0081C6; }
+  color: #0081C6;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
 
 .pokemonContainer {
   display: flex;
@@ -92,10 +98,11 @@ body {
   width: 100px;
   height: 100px;
   margin: 20px;
+  margin-top: 0px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
-  border-width: 5px;
+  border-width: 7px;
   border-radius: 50%;
   background-size: cover;
   -webkit-animation: rotation 2s infinite linear;
@@ -105,10 +112,11 @@ body {
   width: 100px;
   height: 100px;
   margin: 20px;
+  margin-top: 0px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
-  border-width: 5px;
+  border-width: 7px;
   border-radius: 50%;
   background-size: cover;
   -webkit-animation: rotation 2s infinite linear;
@@ -118,10 +126,11 @@ body {
   width: 100px;
   height: 100px;
   margin: 20px;
+  margin-top: 0px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
-  border-width: 5px;
+  border-width: 7px;
   border-radius: 50%;
   background-size: cover;
   -webkit-animation: rotation 2s infinite linear;
@@ -136,10 +145,11 @@ body {
   width: 100px;
   height: 100px;
   margin: 20px;
+  margin-top: 0px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
-  border-width: 5px;
+  border-width: 7px;
   border-radius: 50%;
   background-size: cover;
   -webkit-animation: rotation 2s infinite linear;
@@ -149,10 +159,11 @@ body {
   width: 100px;
   height: 100px;
   margin: 20px;
+  margin-top: 0px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
-  border-width: 5px;
+  border-width: 7px;
   border-radius: 50%;
   background-size: cover;
   -webkit-animation: rotation 2s infinite linear;
@@ -162,10 +173,11 @@ body {
   width: 100px;
   height: 100px;
   margin: 20px;
+  margin-top: 0px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
-  border-width: 5px;
+  border-width: 7px;
   border-radius: 50%;
   background-size: cover;
   -webkit-animation: rotation 2s infinite linear;
@@ -181,6 +193,7 @@ body {
   font-family: "Andale Mono", AndaleMono,monospace;
   font-style: bold;
   color: #F7AF1D;
+  text-shadow: 2px 2px 4px #B8860B;
   padding-top: 0px;
   padding-bottom: 0px;
   overflow: hidden;
@@ -274,4 +287,4 @@ body {
     border-color: orange; } }
 
 .shadow {
-  text-shadow: 4px 4px 6px #B8860B; }
+  text-shadow: 3px 3px 5px #B8860B; }
