--- a/partials/base.scss
+++ b/partials/base.scss
@@ -2,10 +2,11 @@
   width: 100px;
   height: 100px;
   margin: 20px;
+  margin-top: 0px;
   background-color: #EBEBEB;
   border-style: ridge;
   border-color: #0081C6;
-  border-width: 5px;
+  border-width: 7px;
   border-radius: 50%;
   background-size: cover;
   -webkit-animation: rotation 2s infinite linear;
@@ -24,13 +25,13 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 .nameBox {
   width: 150px;
   height: 35px;
-  padding-top: 3px;
+  padding-top: 2px;
   background-color: #fff;
   border-style: ridge;
   border-color: $color;
   border-radius: 25px;
   border-width: 5px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Andale Mono", AndaleMono,monospace;
   color: #0081C6;
   text-align: center;
 
@@ -72,7 +73,7 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 .scoreBoxOne {
   height: 75px;
   width: 75px;
-  padding-top: 0px;
+  margin-bottom: 0px;
   margin-left: 175px;
   background-color: #F8F9FC;
   border-radius: 25px;
@@ -80,11 +81,16 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
   border-color: #0081C6;
   border-width: 7px;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 60px;
+  font-size: 50px;
   text-align: center;
   vertical-align: center;
   color: #0081C6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
+
 
 .scoreBoxTwo {
   height: 75px;
@@ -97,9 +103,13 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
   border-color: #0081C6;
   border-width: 7px;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 60px;
+  font-size: 50px;
   text-align: center;
   color: #0081C6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 
@@ -165,6 +175,7 @@ justify-content: space-evenly;}
     font-family: "Andale Mono", AndaleMono,monospace;
     font-style: bold;
     color: $color;
+    text-shadow: 2px 2px 4px #B8860B;
     padding-top: 0px;
     padding-bottom: 0px;
     // padding-left: 200px;
