--- a/main.css
+++ b/main.css
@@ -17,7 +17,28 @@ body {
   border-width: 5px;
   font-family: "Andale Mono", AndaleMono,monospace;
   color: #0081C6;
-  text-align: center; }
+  text-align: center;
+  /*  animation: pulse 1.5s infinite;
+  animation-direction: alternate; */
+  -webkit-animation: glow 2s ease-in-out infinite;
+  animation: glow 2s ease-in-out infinite; }
+
+/* @keyframes pulse {
+  0% {
+    background-color: #fff;
+  }
+  100% {
+    background-color: #FFFF33;
+  }
+}
+
+@-webkit-keyframes glow 
+{
+  50% { box-shadow: 0 0 20px #aaf; }
+} */
+@keyframes glow {
+  50% {
+    box-shadow: 0 0 60px #FFFF33; } }
 
 #grimBox {
   margin-left: 135px; }
@@ -25,23 +46,6 @@ body {
 #chuckBox {
   margin-right: 140px; }
 
-/* #grimName {
-  font-family: 'Courier New', Courier, monospace;
-  color: #0081C6;
-  font-size: 25px;
-  margin-left: 120px;
-  padding-top: 0px;
-  margin-top: 0px;
-}
-
-#chuckName {
-  font-family: 'Courier New', Courier, monospace;
-  color: #0081C6;
-  font-size: 25px;
-  margin-right: 175px;
-  padding-top: 0px;
-  margin-top: 0px;
-} */
 .scoreContainer {
   display: flex;
   flex-direction: row;
@@ -51,7 +55,6 @@ body {
   height: 75px;
   width: 75px;
   margin-bottom: 0px;
-  margin-left: 175px;
   background-color: #F8F9FC;
   border-radius: 25px;
   border-style: ridge;
@@ -64,13 +67,13 @@ body {
   color: #0081C6;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  margin-left: 175px; }
 
 .scoreBoxTwo {
   height: 75px;
   width: 75px;
-  padding-top: 0px;
-  margin-right: 175px;
+  margin-bottom: 0px;
   background-color: #F8F9FC;
   border-radius: 25px;
   border-style: ridge;
@@ -79,10 +82,12 @@ body {
   font-family: 'Courier New', Courier, monospace;
   font-size: 50px;
   text-align: center;
+  vertical-align: center;
   color: #0081C6;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  margin-right: 175px; }
 
 .pokemonContainer {
   display: flex;
@@ -208,20 +213,6 @@ body {
   /* Adjust as needed */
   animation: typing 3.5s steps(30, end), blink-caret 0.75s step-end infinite; }
 
-@keyframes typing {
-  from {
-    width: 0; }
-  to {
-    width: 100%; } }
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent; }
-  50% {
-    border-color: orange; } }
-
 .stats {
   display: flex;
   flex-direction: row;
@@ -234,7 +225,9 @@ body {
   border-width: 10px;
   border-style: ridge;
   border-color: #F7AF1D;
-  background-color: white; }
+  background-color: white;
+  -webkit-animation: glow 2s ease-in-out infinite;
+  animation: glow 2s ease-in-out infinite; }
 
 @-webkit-keyframes rotation {
   from {
