--- a/partials/base.scss
+++ b/partials/base.scss
@@ -12,6 +12,26 @@
   -webkit-animation: rotation 2s infinite linear;
 }
 
+@mixin scoreBox {
+  height: 75px;
+  width: 75px;
+  margin-bottom: 0px;
+  background-color: #F8F9FC;
+  border-radius: 25px;
+  border-style: ridge;
+  border-color: #0081C6;
+  border-width: 7px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 50px;
+  text-align: center;
+  vertical-align: center;
+  color: #0081C6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
 
 $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 
@@ -34,8 +54,30 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
   font-family: "Andale Mono", AndaleMono,monospace;
   color: #0081C6;
   text-align: center;
+ /*  animation: pulse 1.5s infinite;
+  animation-direction: alternate; */
+  -webkit-animation: glow 2s ease-in-out infinite;
+  animation: glow 2s ease-in-out infinite;
 
+}
 
+/* @keyframes pulse {
+  0% {
+    background-color: #fff;
+  }
+  100% {
+    background-color: #FFFF33;
+  }
+}
+
+@-webkit-keyframes glow 
+{
+  50% { box-shadow: 0 0 20px #aaf; }
+} */
+
+@keyframes glow 
+{
+  50% { box-shadow: 0 0 60px #FFFF33; }
 }
 
 #grimBox {
@@ -46,23 +88,6 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
   margin-right: 140px;
 }
 
-/* #grimName {
-  font-family: 'Courier New', Courier, monospace;
-  color: #0081C6;
-  font-size: 25px;
-  margin-left: 120px;
-  padding-top: 0px;
-  margin-top: 0px;
-}
-
-#chuckName {
-  font-family: 'Courier New', Courier, monospace;
-  color: #0081C6;
-  font-size: 25px;
-  margin-right: 175px;
-  padding-top: 0px;
-  margin-top: 0px;
-} */
 
 .scoreContainer {
   display: flex;
@@ -71,47 +96,18 @@ $cubic: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
 
 .scoreBoxOne {
-  height: 75px;
-  width: 75px;
-  margin-bottom: 0px;
+  @include scoreBox;
   margin-left: 175px;
-  background-color: #F8F9FC;
-  border-radius: 25px;
-  border-style: ridge;
-  border-color: #0081C6;
-  border-width: 7px;
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 50px;
-  text-align: center;
-  vertical-align: center;
-  color: #0081C6;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
+  
 }
 
 
 .scoreBoxTwo {
-  height: 75px;
-  width: 75px;
-  padding-top: 0px;
+  @include scoreBox;
   margin-right: 175px;
-  background-color: #F8F9FC;
-  border-radius: 25px;
-  border-style: ridge;
-  border-color: #0081C6;
-  border-width: 7px;
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 50px;
-  text-align: center;
-  color: #0081C6;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
 
 }
-
 
 
 .pokemonContainer {
@@ -146,6 +142,7 @@ justify-content: space-evenly;}
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+
 }
 
 #dragonairCircle {
@@ -156,18 +153,21 @@ justify-content: space-evenly;}
 
   #butterfreeCircle {
     @include pokemonCircle;
-  background-image: url("images/butterfree.jpg");
+    background-image: url("images/butterfree.jpg");
+
   }
 
   #charmeleonCircle {
     @include pokemonCircle;
-  background-image: url("images/charmeleon.jpg");
+    background-image: url("images/charmeleon.jpg");
+
   }
 
   .pokemonNames {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
   }
 
   .names {
@@ -194,31 +194,12 @@ justify-content: space-evenly;}
 
 }
 
-@keyframes typing {
-    from {
-        width: 0
-    }
-    to {
-        width: 100%
-    }
-}
-
-/* The typewriter cursor effect */
-
-@keyframes blink-caret {
-    from,
-    to {
-        border-color: transparent
-    }
-    50% {
-        border-color: orange;
-    }
-}
 
 .stats {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
 }
 
 .statsBox {
@@ -229,6 +210,8 @@ justify-content: space-evenly;}
   border-style: ridge;
   border-color: $color;
   background-color: white;
+  -webkit-animation: glow 2s ease-in-out infinite;
+  animation: glow 2s ease-in-out infinite;
 }
  
 
