--- a/main.css
+++ b/main.css
@@ -216,7 +216,29 @@ body {
   flex-direction: row;
   justify-content: space-between;
 }
+/* pasted code starts here: */
+.textAnimation {
+  font-size: 25px;
+  font-family: "Andale Mono", AndaleMono, monospace;
+  font-style: bold;
+  color: #f7af1d;
+  text-shadow: 2px 2px 4px #b8860b;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+  border-right: 0.15em solid orange;
+  /* The typwriter cursor */
+  white-space: nowrap;
+  /* Keeps the content on a single line */
+  margin: 0 auto;
+  /* Gives that scrolling effect as the typing happens */
+  letter-spacing: 0.15em;
+  /* Adjust as needed */
+  animation: typing 3.5s steps(30, end), blink-caret 0.75s step-end infinite;
+}
 
+/* pasted code ends here */
 .names {
   font-size: 25px;
   font-family: "Andale Mono", AndaleMono, monospace;
